--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 408,
    "metadata": {
     "scrolled": false
    },
@@ -326,113 +326,12 @@
       "Reducing matrices of size 615..... Done.\n",
       "Reducing matrices of size 784..... Done.\n",
       "Reducing matrices of size 1000..... Done.\n",
-      "Fully completed. Execution took 211 seconds\n",
-      "[[   10.             1.87475911]\n",
-      " [   10.             1.78144577]\n",
-      " [   10.             1.84174826]\n",
-      " [   10.             2.05374026]\n",
-      " [   10.             1.57162839]\n",
-      " [   12.             1.58565762]\n",
-      " [   12.             1.5692487 ]\n",
-      " [   12.             2.22900174]\n",
-      " [   12.             1.75171156]\n",
-      " [   12.             1.99646513]\n",
-      " [   16.             2.51149518]\n",
-      " [   16.             1.98558662]\n",
-      " [   16.             2.35874181]\n",
-      " [   16.             2.85635715]\n",
-      " [   16.             2.62645741]\n",
-      " [   20.             2.9537644 ]\n",
-      " [   20.             3.21296042]\n",
-      " [   20.             3.41969161]\n",
-      " [   20.             2.99842034]\n",
-      " [   20.             3.00063537]\n",
-      " [   26.             3.00699819]\n",
-      " [   26.             3.44684417]\n",
-      " [   26.             4.32594446]\n",
-      " [   26.             2.84614611]\n",
-      " [   26.             2.74612027]\n",
-      " [   33.             5.1418298 ]\n",
-      " [   33.             5.04046448]\n",
-      " [   33.             4.00697836]\n",
-      " [   33.             4.54137228]\n",
-      " [   33.             5.38978543]\n",
-      " [   42.             6.01274268]\n",
-      " [   42.             7.03344518]\n",
-      " [   42.             5.14925716]\n",
-      " [   42.             6.27090552]\n",
-      " [   42.             5.43890471]\n",
-      " [   54.             6.98975159]\n",
-      " [   54.             5.57432142]\n",
-      " [   54.             8.82373048]\n",
-      " [   54.             4.94541395]\n",
-      " [   54.             5.68153387]\n",
-      " [   69.             6.80942295]\n",
-      " [   69.             6.81842304]\n",
-      " [   69.             6.91570277]\n",
-      " [   69.             9.30007985]\n",
-      " [   69.            15.58650987]\n",
-      " [   88.            11.30233454]\n",
-      " [   88.             9.77892016]\n",
-      " [   88.             8.0595736 ]\n",
-      " [   88.             8.13136249]\n",
-      " [   88.            13.13370837]\n",
-      " [  112.            13.41047519]\n",
-      " [  112.             8.84145472]\n",
-      " [  112.            14.38273847]\n",
-      " [  112.             8.43977037]\n",
-      " [  112.             9.72446507]\n",
-      " [  143.            10.71781105]\n",
-      " [  143.            12.56600375]\n",
-      " [  143.            15.33672701]\n",
-      " [  143.            12.20372435]\n",
-      " [  143.            12.05844965]\n",
-      " [  183.            13.66125455]\n",
-      " [  183.            16.58678359]\n",
-      " [  183.            15.5288125 ]\n",
-      " [  183.            15.56922039]\n",
-      " [  183.            14.55956929]\n",
-      " [  233.            26.28803298]\n",
-      " [  233.            18.09333095]\n",
-      " [  233.            20.46103216]\n",
-      " [  233.            20.30534797]\n",
-      " [  233.            20.96253949]\n",
-      " [  297.            39.35940051]\n",
-      " [  297.            25.70283604]\n",
-      " [  297.            21.03832385]\n",
-      " [  297.            23.83934811]\n",
-      " [  297.            27.71395464]\n",
-      " [  379.            19.29000746]\n",
-      " [  379.            23.33531335]\n",
-      " [  379.            26.908898  ]\n",
-      " [  379.            40.83576876]\n",
-      " [  379.            22.19177676]\n",
-      " [  483.            33.87165494]\n",
-      " [  483.            34.09789415]\n",
-      " [  483.            26.61972809]\n",
-      " [  483.            27.18162527]\n",
-      " [  483.            26.83394669]\n",
-      " [  615.            37.76536019]\n",
-      " [  615.            36.20413427]\n",
-      " [  615.            31.5691118 ]\n",
-      " [  615.            33.56510874]\n",
-      " [  615.            35.06894768]\n",
-      " [  784.            36.52805557]\n",
-      " [  784.            31.63832884]\n",
-      " [  784.            33.42954973]\n",
-      " [  784.            40.43432878]\n",
-      " [  784.            37.58406629]\n",
-      " [ 1000.            46.93683188]\n",
-      " [ 1000.            60.25566317]\n",
-      " [ 1000.            44.70287305]\n",
-      " [ 1000.            53.66999386]\n",
-      " [ 1000.            48.15630596]]\n"
+      "Fully completed. Execution took 191 seconds\n"
      ]
     }
    ],
    "source": [
-    "data3 = reduceMatrices(randomNormalMatrix, ns, 5)\n",
-    "print(data)"
+    "data3 = reduceMatrices(randomNormalMatrix, ns, 5)"
    ]
   }
  ],
