touched up midterm even though it's submitted

--- a/Midterm.ipynb
+++ b/Midterm.ipynb
@@ -40,7 +40,7 @@
     "\\begin{align*}\n",
     "&\\exists \\; \\phi \\in (0,h), \\psi \\in (-h,0) \\, s.t. \\\\\n",
     "f(h) &= f(0) + hf^{\\prime}(0) + \\frac{1}{2}h^2f^{\\prime\\prime}(0) + \\frac{1}{6}h^3f^{\\prime\\prime\\prime}(\\phi) \\\\\n",
-    "f(h) &= f(0) - hf^{\\prime}(0) + \\frac{1}{2}h^2f^{\\prime\\prime}(0) - \\frac{1}{6}h^3f^{\\prime\\prime\\prime}(\\psi)\n",
+    "f(-h) &= f(0) - hf^{\\prime}(0) + \\frac{1}{2}h^2f^{\\prime\\prime}(0) - \\frac{1}{6}h^3f^{\\prime\\prime\\prime}(\\psi)\n",
     "\\end{align*}\n",
     "\n",
     "Rewriting $\\tilde{D}_h$ using the above formulas for $f$ we get\n",
@@ -92,7 +92,7 @@
     "\\begin{align*}\n",
     "\\frac{Mh}{3} - \\frac{\\epsilon}{h^2} &= 0 \\\\\n",
     "\\frac{Mh}{3} = \\frac{\\epsilon}{h^2} \\\\\n",
-    "h^3 = \\frac{3\\epsilon}{M}\n",
+    "h^3 = \\frac{3\\epsilon}{M} \\\\\n",
     "h = \\bigg(\\frac{3\\epsilon}{M}\\bigg)^{1/3}\n",
     "\\end{align*}\n",
     "\n",
