--- a/FinalLab.ipynb
+++ b/FinalLab.ipynb
@@ -30,14 +30,14 @@
    "source": [
     "## Question 1.\n",
     "\n",
-    "We aim to find $k$ and $\\alpha$ that maximizes the sum $k+\\alpha$ while mainting the membership $f_a \\in C^{k,\\alpha}([-1,1])$. This is clearly equivalent to just finding the maximal $k$ and maximal $\\alpha$ independantly."
+    "We aim to find $k$ and $\\alpha$ that maximizes the sum $k+\\alpha$ while mainting the membership $f_a \\in C^{k,\\alpha}([-1,1])$. This is equivalent to just finding the maximal $k$ and maximal $\\alpha$ independantly."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we find $k$. On the interval $(0,1]$ the $k^{th}$ derivative of $f_a$ is just $(\\prod_{i=0}^{k}(a-i))x^{a-k}$. If we choose $k \\geq a$ then the $k^{th}$ derivative on $(0,1]$ is either $a!$ or $cx^{-b}$ for some $b,c \\in \\mathbb{R}$ with $b > 0$. In either case $f_{a}^{(k)} \\notin C^0([-1,1])$, as there is a discontinuity point at $x=0$. We need to choose $k$ as large as possible while still being less than $a$, so the best we can do is $k = \\lceil a-1\\rceil$. This works as the $k^{th}$ derivative in $(0,1]$ is of the form $f_a^{(k)} = cx^{a-\\lceil a \\rceil}$ for some $c \\in \\mathbb{R}$, which is indeed continuous."
+    "First we find $k$. On the interval $(0,1]$ the $k^{th}$ derivative of $f_a$ is just $(\\prod_{i=0}^{k}(a-i))x^{a-k}$. If we choose $k \\geq a$ then the $k^{th}$ derivative on $(0,1]$ is either $a!$ or $cx^{-b}$ for some $b,c \\in \\mathbb{R}$ with $b > 0$. In either case $f_{a}^{(k)} \\notin C^0([-1,1])$ as there is a discontinuity point at $x=0$. We need to choose $k$ as large as possible while still being less than $a$, so the best we can do is $k = \\lceil a-1\\rceil$. This works as the $k^{th}$ derivative in $(0,1]$ is of the form $f_a^{(k)} = cx^{a-\\lceil a-1 \\rceil}$ for some $c \\in \\mathbb{R}$, which is indeed continuous."
    ]
   },
   {
